welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
  if ((a+b = 10)|| (a==100 || b==10)){
        ^